--- a/.github/workflows/test-report.yml
+++ b/.github/workflows/test-report.yml
@@ -10,6 +10,13 @@ jobs:
   report:
     name: Workflow test
     runs-on: ubuntu-latest
+
+    permissions:
+      checks: write
+      contents: write
+      pull-requests: write
+      statuses: write
+
     steps:
     - uses: actions/checkout@v2
     - uses: ./
